tests/snapshots/asm_snapshots__asm_i256_sub@aarch64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i256::Int256 as core::ops::arith::Sub>::sub:
	ldp x9, x12, [x1]
	ldp x10, x11, [x0]
	ldp x13, x15, [x1, #16]
	subs x9, x10, x9
	cset w10, lo
	subs x11, x11, x12
	ldp x12, x14, [x0, #16]
	ccmp x11, x10, #0, hs
	cset w16, lo
	sub x10, x11, x10
	stp x9, x10, [x8]
	subs x12, x12, x13
	ccmp x12, x16, #0, hs
	sub x11, x12, x16
	sub x12, x14, x15
	cset w9, lo
	sub x9, x12, x9
	stp x11, x9, [x8, #16]
	ret
