tests/snapshots/asm_snapshots__asm_i256_sub_s390x@s390x-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i256::Int256 as core::ops::arith::Sub>::sub:
	stmg %r14, %r15, 112(%r15)
	lg %r0, 24(%r3)
	slg %r0, 24(%r4)
	lg %r1, 16(%r3)
	slbg %r1, 16(%r4)
	lg %r5, 8(%r3)
	slbg %r5, 8(%r4)
	lg %r3, 0(%r3)
	ipm %r14
	sg %r3, 0(%r4)
	afi %r14, -536870912
	risbg %r4, %r14, 63, 191, 33
	sgr %r3, %r4
	stg %r3, 0(%r2)
	stg %r5, 8(%r2)
	stg %r1, 16(%r2)
	stg %r0, 24(%r2)
	lmg %r14, %r15, 112(%r15)
	br %r14
