tests/snapshots/asm_snapshots__asm_i64_add.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::i64::Int64 as core::ops::arith::Add>::add,"ax",@progbits
	.globl	<bigints::i64::Int64 as core::ops::arith::Add>::add
	.p2align	4
.type	<bigints::i64::Int64 as core::ops::arith::Add>::add,@function
<bigints::i64::Int64 as core::ops::arith::Add>::add:
	.cfi_startproc
	mov eax, edi
	add eax, edx
	adc esi, ecx
	mov edx, esi
	ret
