tests/snapshots/asm_snapshots__asm_i64_add_x86_64@x86_64-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i64::Int64 as core::ops::arith::Add>::add:
	mov eax, edi
	add eax, edx
	adc esi, ecx
	mov edx, esi
	ret
