tests/snapshots/asm_snapshots__asm_i64_div.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
.section .text.<bigints::i64::Int64 as core::ops::arith::Div>::div,"ax",@progbits
	.globl	<bigints::i64::Int64 as core::ops::arith::Div>::div
	.p2align	4
.type	<bigints::i64::Int64 as core::ops::arith::Div>::div,@function
<bigints::i64::Int64 as core::ops::arith::Div>::div:
	.cfi_startproc
	push rax
	.cfi_def_cfa_offset 16
	shl rcx, 32
	mov r8d, edx
	or r8, rcx
	je .LBB66_6
	shl rsi, 32
	mov eax, edi
	or rax, rsi
	mov rcx, r8
	not rcx
	movabs rdx, -9223372036854775808
	xor rdx, rax
	or rdx, rcx
	je .LBB66_7
	mov rcx, rax
	or rcx, r8
	shr rcx, 32
	je .LBB66_5
	cqo
	idiv r8
	mov rdx, rax
	shr rdx, 32
	pop rcx
	.cfi_def_cfa_offset 8
	ret
.LBB66_5:
	.cfi_def_cfa_offset 16
	xor edx, edx
	div r8d
	mov rdx, rax
	shr rdx, 32
	pop rcx
	.cfi_def_cfa_offset 8
	ret
.LBB66_6:
	.cfi_def_cfa_offset 16
	lea rdi, [rip + .Lanon.8a0de8f2d308581a9d48e9cda43cb528.15]
	call qword ptr [rip + core::panicking::panic_const::panic_const_div_by_zero@GOTPCREL]
.LBB66_7:
	lea rdi, [rip + .Lanon.8a0de8f2d308581a9d48e9cda43cb528.15]
	call qword ptr [rip + core::panicking::panic_const::panic_const_div_overflow@GOTPCREL]
