tests/snapshots/asm_snapshots__asm_i64_div@i686-unknown-linux-gnu.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i64::Int64 as core::ops::arith::Div>::div:
	push ebp
	push ebx
	push edi
	push esi
	sub esp, 12
	mov eax, dword ptr [esp + 40]
	mov edx, dword ptr [esp + 44]
	call .L73$pb
.L73$pb:
	pop ebx
.Ltmp:
	add ebx, offset _GLOBAL_OFFSET_TABLE_+(.Ltmp-.L73$pb)
	mov ecx, eax
	or ecx, edx
	je .LBB_3
	mov esi, dword ptr [esp + 36]
	mov edi, edx
	mov ebp, eax
	not edi
	not ebp
	lea ecx, [esi - 2147483648]
	or ecx, edi
	mov edi, dword ptr [esp + 32]
	or ebp, edi
	or ebp, ecx
	je .LBB_2
	push edx
	push eax
	push esi
	push edi
	call __divdi3@PLT
	add esp, 28
	pop esi
	pop edi
	pop ebx
	pop ebp
	ret
.LBB_3:
	sub esp, 12
	lea eax, [ebx + .Lanon.17@GOTOFF]
	push eax
	call core::panicking::panic_const::panic_const_div_by_zero@PLT
.LBB_2:
	sub esp, 12
	lea eax, [ebx + .Lanon.17@GOTOFF]
	push eax
	call core::panicking::panic_const::panic_const_div_overflow@PLT
