tests/snapshots/asm_snapshots__asm_i64_div_armv7@armv7-unknown-linux-gnueabihf.snap
---
source: tests/asm_snapshots.rs
expression: asm
---
<bigints::i64::Int64 as core::ops::arith::Div>::div:
	push {r11, lr}
	orrs r12, r2, r3
	beq .LBB_4
	eor r12, r1, #-2147483648
	orrs r12, r0, r12
	bne .LBB_3
	and r12, r2, r3
	cmn r12, #1
	beq .LBB_5
.LBB_3:
	bl __aeabi_ldivmod
	pop {r11, pc}
.LBB_4:
	ldr r0, .LCPI73_1
.LPC73_1:
	add r0, pc, r0
	mov lr, pc
	b core::panicking::panic_const::panic_const_div_by_zero
.LBB_5:
	ldr r0, .LCPI73_0
.LPC73_0:
	add r0, pc, r0
	mov lr, pc
	b core::panicking::panic_const::panic_const_div_overflow
.LCPI73_0:
.LCPI73_1:
